--- a/src/styles/typography.scss
+++ b/src/styles/typography.scss
@@ -1,18 +1,22 @@
 @import './palette.scss';
+@import url('https://fonts.googleapis.com/css2?family=Poppins&display=swap');
+@import url('https://fonts.googleapis.com/css2?family=Open+Sans&family=Poppins&display=swap');
 
 @mixin demo-typography() {
   * {
-    font-family: 'Montserrat', sans-serif;
+    font-family: 'Open Sans', sans-serif;
     font-style: normal;
-    font-weight: normal;
+    font-weight: 400 700;
   }
 
    h1, h2, h3, h4, h5 {
-    //    font-family: ;
+       font-family: 'Poppins', sans-serif;
+       font-weight: 600;
    }
 
   .subContent{
     color: $grayish-blue;
+    text-align: justify;
   }
 
   h1 {
