--- a/src/styles/index.scss
+++ b/src/styles/index.scss
@@ -1,21 +1,41 @@
 @import './palette.scss';
 @import './typography.scss';
+@import './components/button';
+@import './components/card';
 
 .container {
-    padding: 30px;
-    margin: 0px;
+    padding: 2rem;
+    margin: 1rem;
 }
 
 .primary{
     color: $primary;
 }
 
-.btn-primary{
+.btn-primary {
+    @include btn-primary;
     background-color: $primary;
-    color: $pale-cyan;
+}
+.btn-secondary {
+    background-color: $pale-cyan;
     border-radius: 2%;
+    text-align: center;
+    text-decoration: none;
+    border: none;
+}
+
+.card {
+    @include card;
 }
 
 .prueba {
     color: red;
 }
+
+// Hero
+
+.logo {
+    width: 125px;
+}
+
+@include demo-typography();
