--- a/src/styles/index.scss
+++ b/src/styles/index.scss
@@ -2,8 +2,9 @@
 @import './typography.scss';
 
 .container {
-    padding: 30px;
-    margin: 0px;
+    padding: 10px;
+    margin: 10px;
+    font-family: 'Open Sans', sans-serif;
 }
 
 .primary{
