--- a/src/styles/index.scss
+++ b/src/styles/index.scss
@@ -3,8 +3,12 @@
 @import './hero.scss';
 @import './components/button';
 @import './components/card';
+@import './spacing-helpers';
 
-html, body {
+@include demo-typography();
+
+// container screen
+body, .container {
   /* Take width and height of content and use flexbox layout */
   /* By default all flex items will stretch for cross axis */
 //   display: inline-flex;
@@ -19,28 +23,16 @@ html, body {
   /* Replace min-height with height to also work in IE */
   min-height: 100vh;
   margin: 0;
-//   overflow-x: hidden;
-}
-.container {
-    // padding: .2rem;
-    // margin: .2rem;
+  
+  overflow-x: hidden;
 }
 
-// Mobile styles
-.primary{
-    color: $primary;
-}
 
-// .btn-primary {
-//     @include btn-primary;
-//     background-color: $primary;
-// }
 .btn-secondary {
     @include Button;
     background-color: white;
     color: $dark-cyan;
-    padding: 8px 16px;
-    // font-weight: bold;
+    padding: 8px 24px;
 }
 
 // Content/Cards
@@ -69,6 +61,16 @@ html, body {
 
 @include demo-typography();
 
+// float overfooter
+.overFooter{
+    border-radius: 1rem;
+    background-color: white;
+    transform: translate(0, 45%);
+    outline: 0;
+    -webkit-box-shadow: inset 0 1px 1px rgba(0,0,0,.075),0 0 8px rgba(0,0,0,0.47);
+    box-shadow: inset 0 1px 1px rgba(0,0,0,.075),0 0 8px rgba(0,0,0,0.47);
+}
+
 //Footer
 .logo-footer {
     width: 20px;
@@ -76,12 +78,13 @@ html, body {
     margin-right: 15px;
     margin-top: 20px;
 }
-.caja{
+.caja {
     display: flex;
     align-items: top;
     margin: 10px;
 }
-.caja-logo-redes{
+.copyright{
+    font-size: 14px;
     text-align: center;
 }
 .logo-redes{
@@ -92,6 +95,7 @@ html, body {
     
     width: 10px;
 }
+
 footer {
     background-color: $dark-cyan;
     color: white;
@@ -100,6 +104,7 @@ footer {
         margin: 0;
         margin-top: 15px;
         padding: 0;
+        text-align: left;
     }
     i {
         margin: 10px;
@@ -121,17 +126,18 @@ footer {
 
     .card-body{
         @include card-body-d;
-        color: $grayish-blue
+        color: $grayish-blue;
+        padding-right: 10px;
     }
 
     .card-img{
         @include card-img-d;
     }
 
-    .row-reverse{
-        @include row-reverse;
+    .card-p-d{
+        padding-left: 50px;
+        padding-right: 50px;
     }
 
 }
-    
-@include demo-typography();
+
