--- a/src/styles/index.scss
+++ b/src/styles/index.scss
@@ -72,6 +72,10 @@ body, .container {
 }
 
 //Footer
+.logo-huddle{
+    width: 200px;
+}
+
 .logo-footer {
     width: 20px;
     height: 20px;
@@ -137,6 +141,14 @@ footer {
     .card-p-d{
         padding-left: 10%;
         padding-right: 10%;
+    }
+
+    footer{
+        padding-left: 15%;    
+    }
+    .copyright{
+        font-size: 14px;
+        text-align: right;
     }
 
 }
