Cambio a medidas de card-img

--- a/src/styles/components/_card.scss
+++ b/src/styles/components/_card.scss
@@ -40,8 +40,8 @@
 }
 
 @mixin card-img-d {
-    width: 220px;
-    height: 200px;
+    width: 65%;
+    height: 75%;
     padding-bottom: 15px;
     margin: 30px 10px 20px 10px ;
 }
